# private-lecture-automation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  readthedocs.yml
.github/workflows/: calendar_event.yaml  calendar_event.yml  main.yml  release.yml  static.yaml
data/: introduction.html  students.json.enc  students_example.json
docs/: conf.py  installation.rst
docs/source/: conf.py  index.rst  send_calendar_event.rst  send_introduction_email.rst
src/private_lecture_automation/: __init__.py  main.py
tests/: main_test.py
