# Build System
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project Metadata
[project]
name = "private_lecture_automation"
version = "0.2.0"
description = "Automation tools for private lecture management."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Mizsak", email = "info@pythonvilag.hu" }]
keywords = [
    "automation",
    "calendar event",
    "introduction email",
    "private lecture",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
]
dependencies = ["icalendar==5.0.7", "python-dotenv==1.0.0"]
[project.optional-dependencies]
dev = [
    "black",
    "furo",
    "hatch",
    "mypy",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "ruff",
    "sphinx-copybutton",
    "sphinx",
]
[project.urls]
Repository = "https://github.com/PythonVilag/private-lecture-automation"

# Tools
# Black
[tool.black]
line-length = 100

[tool.hatch.build.targets.wheel]
only-include = ["src/private_lecture_automation", "data"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"data" = "private_lecture_automation/data"

# MyPy
[tool.mypy]
mypy_path = ["src", "tests"]
exclude = ["src/docs"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

# Pytest
[tool.pytest.ini_options]
addopts = "--cov=private_lecture_automation"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

# Ruff
[tool.ruff]
line-length = 100

# Tox
[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py311

    [gh]
    python =
        3.11 = py311

    [testenv]
    setenv =
        PYTHONPATH = {toxinidir}/src
    deps =
        mypy
    commands = mypy src
"""
